[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
fs_extra = "1.2.0"
pico-args = { version = "0.4.2", features = ["combined-flags"], default-features = false }
regex = "1.5.4"
reqwest = { version = "0.11.6", features = ["blocking"] }
